# nomad

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  local.properties.example  settings.gradle.kts
apps/amardice/: README.md  build.gradle.kts
apps/amardice/src/main/: AndroidManifest.xml
apps/amardice/src/main/kotlin/com/isene/amardice/: MainActivity.kt
apps/amardice/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/astro/: README.md  build.gradle.kts  proguard-rules.pro
apps/astro/src/main/: AndroidManifest.xml
apps/astro/src/main/kotlin/com/isene/astro/: MainActivity.kt
apps/astro/src/main/res/values/: colors.xml  themes.xml
apps/books/: README.md  build.gradle.kts  proguard-rules.pro
apps/books/src/main/: AndroidManifest.xml
apps/books/src/main/kotlin/com/isene/books/: BooksViewModel.kt  MainActivity.kt  Prefs.kt
apps/books/src/main/res/values/: colors.xml  themes.xml
apps/gazette/: build.gradle.kts
apps/gazette/src/main/: AndroidManifest.xml
apps/gazette/src/main/kotlin/com/isene/gazette/: GazetteViewModel.kt  MainActivity.kt  Prefs.kt
apps/gazette/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/hyperlist/: README.md  build.gradle.kts  proguard-rules.pro
apps/hyperlist/src/main/: AndroidManifest.xml
apps/hyperlist/src/main/kotlin/com/isene/hyperlist/: MainActivity.kt
apps/hyperlist/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/onepage/: README.md  SPEC.md  build.gradle.kts
apps/onepage/src/main/: AndroidManifest.xml
apps/onepage/src/main/kotlin/com/isene/onepage/: HomeActivity.kt  HomeSurface.kt  KeepAliveService.kt  LayoutStore.kt  Prefs.kt  WizardActivity.kt
apps/onepage/src/main/res/values/: themes.xml
apps/ref/: README.md  build.gradle.kts  proguard-rules.pro
apps/ref/src/main/: AndroidManifest.xml
apps/ref/src/main/assets/collections/: freewill.json
apps/ref/src/main/kotlin/com/isene/ref/: MainActivity.kt  Prefs.kt  RefViewModel.kt
apps/ref/src/main/res/values/: colors.xml  themes.xml
apps/relay/: README.md  build.gradle.kts  proguard-rules.pro
apps/relay/src/main/: AndroidManifest.xml
apps/relay/src/main/kotlin/com/isene/relay/: Gateway.kt  MainActivity.kt
apps/relay/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/scribe/: README.md  build.gradle.kts  proguard-rules.pro
apps/scribe/src/main/: AndroidManifest.xml
apps/scribe/src/main/kotlin/com/isene/scribe/: MainActivity.kt  Prefs.kt  ScribeViewModel.kt
apps/scribe/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/tasks/: README.md  build.gradle.kts  proguard-rules.pro
apps/tasks/src/main/: AndroidManifest.xml
apps/tasks/src/main/kotlin/com/isene/tasks/: MainActivity.kt
apps/tasks/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/tasks/src/main/res/xml/: tasks_widget_info.xml
apps/vox/: README.md  build.gradle.kts  proguard-rules.pro
apps/vox/src/main/: AndroidManifest.xml
apps/vox/src/main/kotlin/com/isene/vox/: MainActivity.kt  Prefs.kt  VoxViewModel.kt
apps/vox/src/main/res/values/: colors.xml  themes.xml
apps/watchit/: README.md  build.gradle.kts
apps/watchit/src/main/: AndroidManifest.xml
apps/watchit/src/main/kotlin/com/isene/watchit/: MainActivity.kt
apps/watchit/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/watchit/src/main/res/xml/: data_extraction_rules.xml
apps/xrpn/: README.md  build.gradle.kts  proguard-rules.pro
apps/xrpn/src/main/: AndroidManifest.xml
apps/xrpn/src/main/res/values/: colors.xml  strings.xml  themes.xml
core/: Cargo.toml
core/src/: amardice.rs  crypto.rs  hyperlist.rs  hyperlist_doc.rs  hyperlist_hl.rs  lib.rs  onepage.rs
core/src/astro/: ephem.rs  events.rs  gear.rs  images.rs  mod.rs  weather.rs
core/src/watchit/: filter.rs  mod.rs  models.rs  tmdb.rs
core/src/xrpn/: engine.rs  format.rs  mod.rs  program.rs
docs/: index.html  style.css
gradle/: libs.versions.toml
(+55 files in other folders)
