[package]
name = "fe2o3-mobile-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Rust core for the nomad mobile suite. Pure logic, exposed to Kotlin via UniFFI."

[lib]
name = "fe2o3_mobile_core"
# cdylib for Android JNI loading, staticlib for iOS later, rlib for host tests.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
uniffi = { version = "0.28", features = [] }
# Ephemeris for the astro app. Zero-dependency pure-Rust crate (local clone),
# so it cross-compiles to Android trivially.
orbit = { path = "../../orbit", package = "fe2o3-orbit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HyperList .p.hl encryption — byte-compatible with desktop scribe / the Ruby
# hyperlist app: AES-256-CBC, PBKDF2-HMAC-SHA256(pw, salt, 10000, 32),
# payload = "ENC:" + base64(salt[16] || iv[16] || ciphertext). All pure Rust,
# cross-compile cleanly to Android.
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding"] }
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
pbkdf2 = { version = "0.12", default-features = false }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[features]
default = []
cli = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]
